--- a/.gcloudignore
+++ b/.gcloudignore
@@ -17,4 +17,16 @@
 node_modules/
 public/
 src/
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 ./*.*
